# tagname

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: rust.yml
src/: lib.rs
tagname_derive/: Cargo.toml
tagname_derive/src/: generation.rs  lib.rs  traversal.rs
tests/: compile_time_harness.rs  tagname.rs  variant.rs
tests/compile_time_tests/: bad-type-struct.rs  bad-type-struct.stderr  bad-type-union.rs  bad-type-union.stderr  empty-enum.rs  empty-enum.stderr  tag_attribute_argument_empty.rs  tag_attribute_argument_empty.stderr  tag_attribute_argument_is_not_assignment.rs  tag_attribute_argument_is_not_assignment.stderr  tag_attribute_argument_lhs_not_case.rs  tag_attribute_argument_lhs_not_case.stderr  tag_attribute_case_argument_is_not_string_literal.rs  tag_attribute_case_argument_is_not_string_literal.stderr  tag_attribute_case_value_not_lower.rs  tag_attribute_case_value_not_lower.stderr
