[package]
name = "tagname"
version = "0.1.0"
edition = "2021"
authors = ["Krzysztof Hrynczenko <jeniopy@gmail.com>"]
documentation = "https://docs.rs/tagname"
keywords = ["derive", "variant", "tag", "tagged-union", "tag-name"]
repository = "https://github.com/khrynczenko/tagname"
homepage = "https://github.com/khrynczenko/tagname"
readme = "README.md"

[dependencies]
tagname_derive = { path = "tagname_derive" }

[workspace]
members = ["tagname_derive"]

[dev-dependencies]
trybuild = "1.0.71"
