[package]
name = "tagname"
version = "0.2.0"
edition = "2021"
authors = ["Krzysztof Hrynczenko <jeniopy@gmail.com>"]
description = "get the name of a variant in your enum as a string"
documentation = "https://docs.rs/tagname"
keywords = ["derive", "variant", "tag", "tagged-union", "tag-name"]
repository = "https://github.com/khrynczenko/tagname"
homepage = "https://github.com/khrynczenko/tagname"
readme = "README.md"
license = "MIT"

[dependencies]
tagname_derive = { version = "0.2.0", path = "tagname_derive" }

[workspace]
members = ["tagname_derive"]

[dev-dependencies]
trybuild = "1.0.71"
