[package]
name = "tagname_derive"
version = "0.1.0"
edition = "2021"
authors = ["Krzysztof Hrynczenko <jeniopy@gmail.com>"]
documentation = "https://docs.rs/tagname"
repository = "https://github.com/khrynczenko/tagname"
homepage = "https://github.com/khrynczenko/tagname"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.47"

