[package]
name = "tagname_derive"
version = "0.3.0"
edition = "2021"
authors = ["Krzysztof Hrynczenko <jeniopy@gmail.com>"]
description = "derive(TagName) implementation"
documentation = "https://docs.rs/tagname"
repository = "https://github.com/khrynczenko/tagname"
homepage = "https://github.com/khrynczenko/tagname"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1.0.47"

